tests/specs/ecosystem/rdtlabs/ts_utils/0_2_14.test
rdtlabs/ts-utils/0.2.14
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Error'.
  public get cause(): ErrorLike {
             ~~~~~
    at file://<tmpdir>/src/cancellation/CancellationError.ts:11:14

error: Type checking failed.

